cpp/test/FreezeScript/dbmap/fail/19_new.ice
[["suppress-warning:deprecated"]] // for class that implements interface

module Test
{

local class C {}

}
